add LiveData example

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SimpleViewModel</string>
+    <string name="seconds">%d seconds elapsed</string>
 </resources>
